Added files manager, favourite, improved search and updated arch

--- a/app/src/main/res/layout/activity_queue.xml
+++ b/app/src/main/res/layout/activity_queue.xml
@@ -8,29 +8,25 @@
     tools:context=".activities.QueueActivity"
     android:fitsSystemWindows="true">
 
-    <TextView
-        android:id="@+id/listerTitle"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="Songs in queue :"
-        android:textColor="@color/white"
-        android:textSize="30sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listerTitle">
+        <TextView
+            android:id="@+id/listerTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Songs in queue :"
+            android:textColor="@color/white"
+            android:textSize="30sp" />
 
         <LinearLayout
             android:id="@+id/listerLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
-    </ScrollView>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
