--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -9,6 +9,7 @@
     android:paddingLeft="16dp"
     android:paddingTop="8dp"
     android:paddingRight="16dp"
+    android:background="?android:attr/selectableItemBackground"
     android:paddingBottom="8dp">
 
     <LinearLayout
