--- a/app/src/main/res/layout/fragment_lister_recycler.xml
+++ b/app/src/main/res/layout/fragment_lister_recycler.xml
@@ -19,6 +19,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list_recycler_view"
+            android:scrollbars="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"></androidx.recyclerview.widget.RecyclerView>
