--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
         android:layout_weight="1" />
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/linearLayoutControl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#222222"
