add menus, playback saving, interface improvments

--- a/app/src/main/res/layout/activity_music_controller.xml
+++ b/app/src/main/res/layout/activity_music_controller.xml
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="11dp"
             android:gravity="center_horizontal"
-            android:text="PLAYING FROM PHONE"
+            android:text="PLAYING MUSIC FROM"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/list"
@@ -49,9 +49,16 @@
 
         <TextView
             android:id="@+id/playingFrom"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:text="queue"
+            android:ellipsize="marquee"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
             android:textColor="#FFFFFF"
             app:layout_constraintEnd_toEndOf="@+id/textView8"
             app:layout_constraintStart_toStartOf="@+id/textView8"
