--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -35,6 +35,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
@@ -53,7 +54,15 @@
                 android:layout_gravity="left"
                 android:paddingLeft="16dp"
                 android:text="description" />
+
         </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/imageButtonMore"
+            style="@style/Widget.AppCompat.ActionButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_menu" />
     </LinearLayout>
 
 </LinearLayout>
