--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -83,8 +83,8 @@
                 <LinearLayout
                     android:id="@+id/layout_recent"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal" />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical" />
             </HorizontalScrollView>
 
         </LinearLayout>
