formatted and improved code

--- a/app/src/main/res/layout/fragment_item_square.xml
+++ b/app/src/main/res/layout/fragment_item_square.xml
@@ -15,13 +15,13 @@
         android:padding="5dp">
 
         <ImageView
-            android:id="@+id/imageView_item"
+            android:id="@+id/iv_item"
             android:layout_width="110dp"
             android:layout_height="110dp"
             tools:src="@drawable/music" />
 
         <TextView
-            android:id="@+id/textView_Name"
+            android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
@@ -29,7 +29,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView_desc"
+            android:id="@+id/tv_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="description" />
