update recyclerview list processing

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,7 +35,9 @@
                     android:id="@+id/layout_favourites"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal" />
+                    android:orientation="horizontal"
+                    tools:listitem="@layout/fragment_item_square"/>
+
             </HorizontalScrollView>
 
             <TextView
