--- a/app/src/main/res/layout/fragment_lister_recycler.xml
+++ b/app/src/main/res/layout/fragment_lister_recycler.xml
@@ -1,18 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/listerTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="List"
+            android:textColor="@color/white" />
+
         <LinearLayout
             android:id="@+id/ll_options"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingTop="10dp"
+            android:paddingBottom="20dp">
 
             <Button
 
@@ -36,19 +47,13 @@
                 android:text="Sort by Artist" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/listerTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="List"
-            android:textColor="@color/white" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list_recycler_view"
             android:scrollbars="vertical"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            tools:listitem="@layout/list_item"
             android:layout_weight="1" />
 
         <LinearLayout
