--- a/app/src/main/res/drawable/imageborderfilterleft.xml
+++ b/app/src/main/res/drawable/imageborderfilterleft.xml
@@ -2,10 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient android:angle="0"
-                android:endColor="#00000000"
-                android:startColor="#000000"
-                android:type="linear" />
+            <gradient android:angle="0" android:endColor="#00000000" android:startColor="#000000" android:type="linear" />
         </shape>
     </item>
 </selector>
