--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.SplashScreen"
-    android:background="@drawable/background">
+    android:background="@drawable/background"
+    tools:context=".activities.SplashScreen">
 
     <ImageView
         android:id="@+id/splashIcon"
