--- a/app/src/main/res/layout/activity_music_controller.xml
+++ b/app/src/main/res/layout/activity_music_controller.xml
@@ -84,7 +84,7 @@
             android:layout_marginTop="50dp"
             android:layout_marginEnd="20dp"
             android:adjustViewBounds="true"
-            android:onClick="showlistClick"
+            android:onClick="showListClick"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_list"
             app:layout_constraintEnd_toEndOf="parent"
