--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="10dp"
         android:layout_weight="0"
         android:orientation="horizontal">
 
@@ -61,6 +64,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#222222"
+        android:gravity="center"
         android:orientation="horizontal"
         android:padding="5dp">
 
@@ -81,7 +85,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/listerTitle"
+                android:id="@+id/tv_path"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="marquee"
@@ -112,7 +116,7 @@
         <Button
             android:id="@+id/playBtn2"
             android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_height="match_parent"
             android:layout_margin="15dp"
             android:background="@drawable/ic_play"
             android:backgroundTint="#FFFFFF"
