--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.424"
-        app:srcCompat="@drawable/appiconrot" />
+        app:srcCompat="@drawable/appicon" />
 
     <TextView
         android:id="@+id/textView"
