--- a/app/src/main/res/layout/fragment_lister_recycler.xml
+++ b/app/src/main/res/layout/fragment_lister_recycler.xml
@@ -131,23 +131,40 @@
                 android:id="@+id/listerButtonAddTo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginBottom="4dp"
                 android:layout_weight="1"
                 android:background="@drawable/ripple"
                 android:drawableLeft="@drawable/ic_addplaylist"
-                android:paddingStart="10dp"
-                android:text="Add To" />
+                android:text="Add to" />
+
+            <Button
+                android:id="@+id/listerButtonRemove"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginBottom="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/ripple"
+                android:drawableLeft="@drawable/ic_close"
+                android:text="Remove" />
 
             <Button
                 android:id="@+id/listerButtonPlay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginBottom="4dp"
                 android:layout_weight="1"
                 android:background="@drawable/ripple"
                 android:drawableLeft="@drawable/ic_playarrow"
-                android:paddingStart="10dp"
-                android:text="Play selection" />
+                android:text="Play" />
 
         </LinearLayout>
 
